...
  }
  private var addButton: some View {
    switch editMode {
    case .inactive:
      return AnyView(
        Button(action: onAdd) { Image(systemName: "plus") }
          .accessibility(identifier: "addBtn")
      )
    default:
      return AnyView(EmptyView())
    }
  }
  
...
